# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-01-21 01:15:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-172

    Summary:
      Added Time.hs
    Revision:
      missingh--head--0.7--patch-172


    new files:
     libsrc/MissingH/Time.hs testsrc/Timetest.hs

    modified files:
     ChangeLog Setup.description libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Types.hs testsrc/Tests.hs


2004-12-24 02:32:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-171

    Summary:
      really fixed iotest
    Revision:
      missingh--head--0.7--patch-171


    modified files:
     ChangeLog testsrc/IOtest.hs


2004-12-24 02:26:41 GMT	John Goerzen <jgoerzen@complete.org>	patch-170

    Summary:
      Cleaned up iotest
    Revision:
      missingh--head--0.7--patch-170


    modified files:
     ChangeLog testsrc/IOtest.hs


2004-12-24 02:21:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-169

    Summary:
      Updated announcement
    Revision:
      missingh--head--0.7--patch-169


    modified files:
     ChangeLog announcements/0.8.0.txt


2004-12-24 02:17:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-168

    Summary:
      Updated examples
    Revision:
      missingh--head--0.7--patch-168


    new files:
     examples/.arch-ids/test2.hs.id examples/.arch-ids/test3.hs.id
     examples/test2.hs examples/test3.hs

    removed files:
     .arch-ids/test2.hs.id .arch-ids/test3.hs.id test2.hs test3.hs

    modified files:
     ChangeLog


2004-12-24 02:16:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-167

    Summary:
      Readying 0.8.0
    Revision:
      missingh--head--0.7--patch-167


    new files:
     announcements/.arch-ids/=id announcements/0.8.0.txt
     examples/.arch-ids/=id

    modified files:
     ChangeLog Setup.description

    renamed files:
     ftptest.hs
       ==> examples/ftptest.hs

    new directories: